# wikipedia-flashcards-agent

./: README.md  README.md.backup  main.py  pyproject.toml
agents/: __init__.py  flashcard_generator.py  summary.py  wikipedia_search.py
examples/: flashcards_ai_agents.md  flashcards_valentines_day.md
models/: __init__.py  flashcards.py  wikipedia.py
prompts/: cursor_prompt.md
